add composer.json manifest .gitignore index.php

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+
+        "strukt/do":"dev-master"
+    },
     "bin":["bin/publish-strukt-audit"]
 }
