--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     "minimum-stability": "dev",
     "require": {
 
-        "strukt/do":"dev-master"
+        "strukt/pkg-do":"dev-master"
     }
 }
