--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         }
     ],
     "minimum-stability": "dev",
+    "autoload": {
+
+        "psr-0": { "Strukt\\": "src/"}
+    },
     "require": {
 
         "strukt/pkg-do":"dev-master"
